# sw-assist

./: .env.example  .gitignore  Cargo.toml  README.md  SPEC.md  test_file_operations.sh
.cursor/rules/: spec.mdc
src/: config.rs  io.rs  llm.rs  main.rs  render.rs  session.rs  util.rs
tests/: ask_from_config.rs  ask_json.rs  chat_mock_provider.rs  cli_smoke.rs  code_generation_test.rs  commit_msg_global_json.rs  enhanced_file_ops_test.rs  explain_json.rs  init_config.rs  json_errors.rs  models_caps.rs  models_overrides.rs  models_remote.rs  models_todos.rs  net_groq.rs  review_commit.rs  review_json.rs  session_search_json.rs  sessions.rs  summarize_explain.rs  summarize_json.rs  todos_normalize_net.rs
