[package]
name = "sw-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
dotenvy = "0.15"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "sw"
path = "src/main.rs"
